# seal-capstone

./: CMakeLists.txt  README.md
native/capstone/: CMakeLists.txt  linear-regression.cpp  test.py
native/examples/: CMakeLists.txt  examples.cpp  linear-regression-bfv.cpp  linear-regression-ckks.cpp  linear-regression.cpp
